--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/entity": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "@types/socket.io-client": "^1.4.34",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^0.7.0",
